# mini-code

./: .gitignore  .mcp.json  CLAUDE.md  README.md  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.claude/agents/: reviewer.md
.claude/rules/: chinese-greeting.md
.claude/skills/commit/: SKILL.md
.claude/skills/greet/: SKILL.md
docs/: checkpoint-design.md
python/: README.md  pyproject.toml  snake.py
python/mini_claude/: __init__.py  __main__.py  agent.py  checkpoint.py  mcp_client.py  memory.py  prompt.py  session.py  skills.py  subagent.py  tools.py  ui.py
test/: TEST-GUIDE.md  cleanup.sh  large-file.txt  mcp-server.cjs  quote-test.js  setup.sh
