[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-from-scratch"
version = "1.0.0"
description = "A minimal coding agent inspired by Claude Code, built from scratch in Python"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "rich>=13.0.0",
]

[project.scripts]
mini-claude-py = "mini_claude.__main__:main"

[tool.setuptools.packages.find]
include = ["mini_claude*"]

[tool.setuptools.package-data]
mini_claude = ["system_prompt.md"]
